--- a/RecyclerViewTest/app/src/main/res/layout/fruit_item.xml
+++ b/RecyclerViewTest/app/src/main/res/layout/fruit_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+android:orientation="horizontal"
+android:layout_width="match_parent"
+android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/fruit_image"
@@ -12,8 +12,6 @@
     <TextView
         android:id="@+id/fruit_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp" />
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
